# PromptVault

./: .env.example  .gitignore  README.md  docker-compose.yml  test_register.js
backend/: alembic.ini  pyproject.toml  requirements.txt  test_bug.py  test_cors.py  test_register_flow.py  test_register_login.py  test_users_me.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  557cc50ec443_add_category_and_prompt_models.py  7be8f3cc2138_add_additional_images_to_prompts.py  97231e0858ff_case_insensitive_email_index.py  9889e81c8aa4_create_user_table.py  ca408cb52f00_add_orders_order_items_and_payments_.py  d9fef4b110fd_replace_prompt_file_url_with_prompt_text.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  categories.py  deps.py  health.py  orders.py  prompts.py  router.py  uploads.py  users.py
backend/app/core/: config.py  exceptions.py  response.py  security.py
backend/app/db/: session.py
backend/app/integrations/: cloudinary.py  stripe.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  category.py  order.py  prompt.py  user.py
backend/app/repositories/: __init__.py  category_repository.py  order_repository.py  prompt_repository.py  user_repository.py
backend/app/schemas/: __init__.py  category.py  order.py  prompt.py  token.py  user.py
backend/app/services/: __init__.py  auth_service.py  (+3 more)
backend/scripts/: reset_demo_data.py  seed_categories.py
backend/tests/: conftest.py  test_auth.py  test_editing_workflows.py  test_health.py  test_orders.py  test_prompts.py
(+44 files in other folders)
