[project]
name = "promptvault-backend"
version = "0.1.0"
description = "PromptVault — AI Prompt Marketplace API"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
